--- a/armory-intelligence/package.json
+++ b/armory-intelligence/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@next/swc-win32-x64-msvc": "^16.1.6",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-popover": "^1.1.15",
@@ -42,7 +43,7 @@
     "lucide-react": "^0.554.0",
     "next": "^15.5.7",
     "prisma": "^5.22.0",
-    "quansync": "^1.0.0",
+    "quansync": "^0.2.11",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
