fix: Add prisma generate postinstall script and DATABASE_URL env var
- Add postinstall script to generate Prisma Client on Vercel
- Move DATABASE_URL to environment variable
- Update env examples with DATABASE_URL

--- a/armory-intelligence/package.json
+++ b/armory-intelligence/package.json
@@ -11,7 +11,8 @@
     "init": "npx tambo init",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
