feat: enhance Tambo components with default values and improved suggestions
- Added default values to Zod schemas in graph and card components for better usability.
- Updated AGENTS.md with guidelines for Tambo generative UI rules.
- Modified default suggestions in MessageThreadFull to provide more relevant queries related to firearms.

--- a/armory-intelligence/package.json
+++ b/armory-intelligence/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node --require ./fix-readlink.js node_modules/next/dist/bin/next dev",
+    "build": "node --require ./fix-readlink.js node_modules/next/dist/bin/next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
