feat: Add Supabase client and theme system for Arsenal Nexus
- Implemented a lazy-initialized Supabase client in `supabase.ts` to handle database connections only when configured.
- Created a theme system in `theme.ts` with three distinct themes: Empire, Rebellion, and Tactical, including color schemes and CSS variables.
- Developed a comprehensive weapons database in `weapons-data.ts`, including real-world and Star Wars weapons with cross-references.
- Introduced a weapons service in `weapons-service.ts` to query weapons from Supabase with a fallback to local data.
- Established a database schema in `schema.sql` for weapons, comparison sessions, and weapon ratings, including necessary policies for public access and real-time capabilities.

--- a/armory-intelligence/package.json
+++ b/armory-intelligence/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/oxide": "^4.1.17",
     "@tambo-ai/react": "^0.70.0",
     "@tambo-ai/typescript-sdk": "^0.84.0",
